plugins {
    id 'java'
    id 'application'
}

mainClassName = 'com.dch.CacheCompaire'

dependencies {
    compile group: 'org.apache.commons', name: 'commons-jcs-core', version: '2.2'
    compile group: 'org.ehcache', name: 'ehcache', version: '3.5.2'
    testCompile 'junit:junit:4.12'
}

sourceCompatibility = 1.10
targetCompatibility = 1.10

version='1.0-SNAPSHOT'

repositories {
    jcenter()
}

compileJava {
    options.compilerArgs += [
            "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED",
            "--add-exports", "jdk.unsupported/sun.misc=ALL-UNNAMED",
            "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
            "--add-modules=jdk.unsupported"]
}
